--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="pages/contato.html" class="hover:underline">Contato</a>
       </nav>
       <div class="flex items-center gap-3">
-        <a href="https://wa.me/55519996142308?text=Ol%C3%A1%20Aurora Feminina%2C%20gostaria%20de%20agendar%20um%20hor%C3%A1rio." target="_blank"
+        <a href="https://wa.me/5551991717745?text=Ol%C3%A1%20Aurora Feminina%2C%20gostaria%20de%20agendar%20um%20hor%C3%A1rio." target="_blank"
            class="bg-[#25D366] text-white px-4 py-2 rounded-full font-semibold shadow btn-premium">Agendar</a>
         <button id="btnMenu" class="md:hidden p-2 text-xl" aria-label="Abrir menu"><i class="fas fa-bars"></i></button>
       </div>
@@ -168,7 +168,7 @@
       <div class="bg-white rounded-3xl p-8 shadow-lg">
         <h2 class="text-3xl font-bold">Pronta para se apaixonar por você mesma?</h2>
         <p class="text-gray-600 mt-3 mb-6">Garanta seu horário e comece sua jornada de beleza e confiança conosco.</p>
-        <a href="https://wa.me/55519996142308?text=Ol%C3%A1%20Aurora Feminina!%20Quero%20agendar%20um%20hor%C3%A1rio." target="_blank"
+        <a href="https://wa.me/5551991717745?text=Ol%C3%A1%20Aurora Feminina!%20Quero%20agendar%20um%20hor%C3%A1rio." target="_blank"
            class="bg-[#D4AF37] px-10 py-4 rounded-full text-white font-bold btn-premium">Agendar via WhatsApp</a>
       </div>
     </section>
@@ -178,15 +178,15 @@
     <div class="max-w-6xl mx-auto grid md:grid-cols-3 gap-6 items-start px-6">
       <div>
         <h3 class="text-xl font-bold text-[#D4AF37]">Contato</h3>
-        <p class="mt-2">Av. Zero Hora, 1100 - Sala 108 - Porto Verde, Alvorada - RS</p>
-        <p class="mt-1">Telefone: <a href="tel:+5551996142308" class="underline">(+55) 51 99614-2308</a></p>
+        <p class="mt-2">Av. Zero Hora,1020 - Sala 100 - Porto Verde, Alvorada - RS</p>
+        <p class="mt-1">Telefone: <a href="tel:+5551991717745" class="underline">(+55) 51 99171-7745</a></p>
         <p class="mt-1">Horário: Seg–Sáb 09:00–19:00</p>
         <p class="mt-1"><a href="https://www.google.com/maps" target="_blank" class="underline">Ver no Google Maps</a></p>
       </div>
       <div class="text-center">
         <h3 class="text-xl font-bold text-[#D4AF37]">Siga-nos</h3>
         <div class="flex justify-center gap-4 mt-4 text-2xl">
-          <a href="https://www.instagram.com/nadin_portoverde/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/m4rcopinheiro/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
           <a href="https://linktr.ee/Aurora Femininacabeleireirosestetica" target="_blank" aria-label="Linktree"><i class="fas fa-link"></i></a>
         </div>
         <p class="mt-4 text-sm text-gray-400">Linktree e Instagram do cliente incluídos.</p>
@@ -194,7 +194,7 @@
       <div class="text-right">
         <h3 class="text-xl font-bold text-[#D4AF37]">Aurora Feminina Porto Verde</h3>
         <p class="mt-2">Transformando beleza em poder!</p>
-        <p class="mt-6 text-sm text-gray-400">&copy; 2025 Espaço Aurora Feminina Porto Verde</p>
+        <p class="mt-6 text-sm text-gray-400">&copy; 2025 Desenvolvido por Marco Pinheiro </p>
       </div>
     </div>
   </footer>
