adicionei meta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="pt-BR">
 <head>
   <!-- Meta & SEO avançado (edite textos e URLs abaixo) -->
+     <meta property="og:title" content="Demo Beleza - Salão de Beleza" />
+  <meta property="og:description" content="Site de demonstração criado para um salão de beleza, com informações de contato, serviços e portfólio." />
+  <meta property="og:image" content="https://marco-dev-pinheiro.github.io/demo-beleza/assets/img/og-image.jpg" />
+  <meta property="og:url" content="https://marco-dev-pinheiro.github.io/demo-beleza/" />
+  <meta property="og:type" content="website" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Espaço Aurora Feminina Porto Verde - Realce sua beleza única hoje</title>
+  <title>Espaço Aurora Feminina Salão de beleza - Realce sua beleza hoje</title>
   <meta name="description" content="Espaço Aurora Feminina Porto Verde — cortes, coloração, estética, unhas e tratamentos. Agende pelo WhatsApp.">
   <meta name="keywords" content="salão de beleza, Aurora Feminina Porto Verde, corte, coloração, mechas, estética, unhas, maquiagem">
   <meta name="author" content="Aurora Feminina Porto Verde">
