--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="absolute inset-0 bg-black/40"></div>
       <div class="relative z-10 text-white max-w-3xl">
         <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold mb-4 leading-tight" style="font-family: 'Playfair Display', serif;">
-          Aurora Feminina Porto Verde
+          Aurora Feminina Estetica e Beleza
         </h1>
         <p class="text-lg sm:text-xl md:text-2xl mb-8 font-light">Transforme-se com estilo e carinho. Sinta-se linda e confiante.</p>
         <div class="flex flex-col sm:flex-row justify-center items-center gap-4">
